<resources>
    <string name="app_name">MagicCarpe</string>
    <string name="titre">Magic Carpe</string>
    <string name="sous_titre">La carpe enfin accessible</string>
    <string name="btn_connexion">connexion</string>
    <string name="btn_inscription">inscription</string>
    <string name="handprint">Empreinte</string>
    <string name="login">LOGIN ou EMAIL</string>
    <string name="email">EMAIL</string>
    <string name="inscriptionLogin">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="validate">VALIDER</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="send">Envoyer</string>
</resources>