<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/titre"
            android:textAlignment="center"></TextView>

        <TextView
            android:id="@+id/sous_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sous_titre"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btn_connexion"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/btn_connexion"></Button>

        <Button
            android:id="@+id/btn_inscription"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/btn_inscription"></Button>
    </LinearLayout>

</FrameLayout>